# SWYF

./: .gitignore  Dockerfile  Procfile  README.md  git-log-dates.txt  git-log.txt  pyproject.toml  render.yaml  requirements.txt  spline-integration.md
.github/workflows/: build-docker-DEV.yml  build-docker-PROD.yml
docs/: CHANGELOG.md  CONTRIBUTING.md  README.md  RESTRUCTURING.md
frontend/: .npmrc  copy-build.ps1  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ArTryOn.tsx  AvatarPreview.tsx  CallToAction.tsx  Catalog.tsx  Features.tsx  Footer.tsx  Header.tsx  Hero.tsx  Home.tsx  HowItWorks.tsx  Layout.tsx  Navbar.tsx  NotificationPanel.tsx  SkinToneAnalysis.tsx  ThemeToggle.tsx  ThreeDGenerator.tsx  TryOn.tsx
frontend/src/contexts/: NotificationContext.tsx  ThemeContext.tsx
frontend/src/pages/: About.tsx  BlockchainFeatures.tsx  BusinessModel.tsx  CatalogPage.tsx  Contact.tsx  Features.tsx  HowItWorks.tsx  Index.tsx  Projects.tsx  Rewards.tsx
services/virtual-tryon/: flasktry.py  requirements.txt  skin_tone_classifier.py
services/virtual-tryon/app/: mock_data.py
services/virtual-tryon/app/routes/: image_processing.py  personalized.py
services/virtual-tryon/static/: catalog.json
services/virtual-tryon/static/assets/: desktop.ini
services/virtual-tryon/static/react-app/: index.html
services/virtual-tryon/static/react-app/assets/: howler-B8dJa5e1.js  howler-BH122MJq.js  howler-Bu0ACwUn.js  howler-D06Ae8CH.js  howler-DDk59pjq.js  howler-DSIlhwYv.js  (+33 more)
