[tool.poetry]
name = "Swyf"
version = "1.0.0"
description = ""
authors = ["Hélio Potelicki <helio@cogmo.com.br>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.1"
flask-cors = "^6.0.0"
numpy = "^2.2.6"
opencv-python = "^4.11.0.86"
pillow = "^11.2.1"
werkzeug = "^3.1.3"
requests = "^2.32.3"
gunicorn = "^23.0.0"
skin-tone-classifier = "^1.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"